2003-10-06  Fumitoshi UKAI  <ukai@debian.or.jp>

	* fix problem reported on [w3m-dev 03981]
	  from Mamoru KOMACHI <usata@sodan.ecc.u-tokyo.ac.jp>
	* configure.in: add AC_SUBST(HELP_DIR)
	* Makefile.in (HELP_DIR): use AC_SUBT(HELP_DIR)
	* scripts/Makefile.in: add PACKAGE, VERSION, DOMAIN
			use PACKAGE instead of package: 
			 CGIBIN_DIR,AUXBIN_DIR,CONF_DIR
			add HELP_DIR
			add SUBDIRS
			(install unstall): do $(SUBDIRS)
	* scripts/multipart/Makefile.in: add PACKAGE,VERSION,DOMAIN
			use PACKAGE instead of package: 
			 CGIBIN_DIR,AUXBIN_DIR,CONF_DIR
			add HELP_DIR
	* scripts/w3mman/Makefile.in: add PACKAGE,VERSION,DOMAIN
			use PACKAGE instead of package: 
			 CGIBIN_DIR,AUXBIN_DIR,CONF_DIR
			add HELP_DIR
			add BIN_DIR, MAN1_DIR
			LIB_TARGETS->CGIBIN_TARGETS
			fix INSTALL_MAN
	* scripts/w3mman/w3mman.1.in: 
			change @LIB_DIR@ to @libexecdir@/@PACKAGE@/cgi-bin/

2003-10-01  Akira TAGOH <at@gclab.org>

	* acinclude.m4 (AC_W3M_SSL): use PKG_CHECK_MODULES

2003-09-29  Fumitoshi UKAI  <ukai@debian.or.jp>

	* Makefile.in (distclean): remove posubst
	* Makefile.in (functable.c): fix cannot open file `b' for reading

2003-09-27  Fumitoshi UKAI  <ukai@debian.or.jp>

	* funcname.tab: generated from DEFUN
	* main.c menu.c: use DEFUN
	* conv.c ucs_eucjp.h ucs_latin1.h: deleted

2003-09-26  Fumitoshi UKAI  <ukai@debian.or.jp>

	* add posubst,  compile-time message l10n
	* Makefile.in: @POSUBST@
	* acinclude.m4(AC_W3M_M17N): add POSUBST, POLANG
		--enable-messagel10n
	* configure.in (W3M_LANG): subst
		(AM_GET_GNUTEXT): if messagel10n enabled, don't use NLS
		(AC_OUTOUT): add posubst, chmod +x
	* menu.c: remove if LANG == JA messages
	* rc.c: ditto

2003-09-26  Fumitoshi UKAI  <ukai@debian.or.jp>

	* remove ./intl
	* configure.in: external fo AM_GNU_GETTEXT
	* Makefile.in: remove intl, INTLTARGET

2003-09-25  Fumitoshi UKAI  <ukai@debian.or.jp>

	* fix [w3m-dev 03975] Re: gettextize
	* Makefile.in: add INTLTARGET, NLSTARGET
		cleanup